[gd_scene load_steps=39 format=3 uid="uid://cmimrj2sfdima"]

[ext_resource type="Script" uid="uid://bt7v5bwv34fru" path="res://scripts/anger_script.gd" id="1_y2dum"]
[ext_resource type="Shader" uid="uid://dfv3r5ddvi64k" path="res://shaders/viewport-stilisation.gdshader" id="2_trhcv"]
[ext_resource type="Texture2D" uid="uid://k2g7cngelvob" path="res://sprites/anger-level-palette-1x.png" id="3_gty67"]
[ext_resource type="PackedScene" uid="uid://fbc2xb6crcix" path="res://scenes/scene_transition_animation.tscn" id="4_gl7ig"]
[ext_resource type="Script" uid="uid://pxom27aj2sbu" path="res://player-movement.gd" id="5_r2yyb"]
[ext_resource type="Texture2D" uid="uid://bebwn3i4x0pi2" path="res://sprites/f-icon.png" id="6_c41fh"]
[ext_resource type="Texture2D" uid="uid://dyseviy52i6ua" path="res://sprites/talking.png" id="7_14f3b"]
[ext_resource type="ArrayMesh" uid="uid://pp6ksoba1sn4" path="res://assets/Pillar.obj" id="8_livvb"]
[ext_resource type="Script" uid="uid://cg3d0qbbovt8n" path="res://scripts/Textbox.gd" id="9_0ojr7"]
[ext_resource type="Theme" uid="uid://c4h4g480ssbxo" path="res://themes/panel-theme.tres" id="10_6g2yb"]
[ext_resource type="FontFile" uid="uid://g1yjaor6bxfu" path="res://fonts/zig_____.ttf" id="11_3lp2j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iuvue"]
shader = ExtResource("2_trhcv")
shader_parameter/num_colors = 9
shader_parameter/PALETTE_TEXTURE = ExtResource("3_gty67")

[sub_resource type="GDScript" id="GDScript_j5oor"]
script/source = "extends Camera3D
"

[sub_resource type="BoxShape3D" id="BoxShape3D_54gy4"]
size = Vector3(50, 0.01, 20)

[sub_resource type="Gradient" id="Gradient_7l0j4"]
colors = PackedColorArray(0.84, 0, 0, 1, 0.0775, 0.15, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j5oor"]
noise_type = 3
seed = 3
frequency = 0.0007
fractal_type = 2
cellular_jitter = 0.5
domain_warp_enabled = true
domain_warp_type = 2
domain_warp_amplitude = 100.0
domain_warp_frequency = 0.01
domain_warp_fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dmj2s"]
width = 1280
height = 1280
generate_mipmaps = false
seamless = true
seamless_blend_skirt = 0.34
color_ramp = SubResource("Gradient_7l0j4")
noise = SubResource("FastNoiseLite_j5oor")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iuvue"]
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
albedo_texture = SubResource("NoiseTexture2D_dmj2s")
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_4xdg8"]
size = Vector2(10, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_gttpk"]
size = Vector3(41.3777, 1, 0.318848)

[sub_resource type="BoxShape3D" id="BoxShape3D_bk5l6"]
size = Vector3(43.4979, 1, 0.526367)

[sub_resource type="BoxShape3D" id="BoxShape3D_b56of"]
size = Vector3(25.724, 1, 0.376)

[sub_resource type="BoxShape3D" id="BoxShape3D_2mvgt"]
size = Vector3(0.403198, 1, 22.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_j5oor"]
size = Vector3(0.387207, 0.359436, 0.395996)

[sub_resource type="BoxMesh" id="BoxMesh_dmj2s"]
size = Vector3(0.37, 0.37, 0.37)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4xdg8"]
specular_mode = 1
albedo_color = Color(0.75, 0.75, 0.75, 1)
metallic_specular = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_iijyl"]
atlas = ExtResource("7_14f3b")
region = Rect2(0, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7fh2"]
atlas = ExtResource("7_14f3b")
region = Rect2(31, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_27idm"]
atlas = ExtResource("7_14f3b")
region = Rect2(62, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbavh"]
atlas = ExtResource("7_14f3b")
region = Rect2(93, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_74a3a"]
atlas = ExtResource("7_14f3b")
region = Rect2(124, 0, 31, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_y2dum"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iijyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7fh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27idm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbavh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74a3a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_db25o"]
size = Vector3(0.090332, 1, 17.2031)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2dum"]
disable_ambient_light = true
texture_filter = 0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_y2dum"]
points = PackedVector3Array(1.09135, 8.04979, 0.331742, -1.06379, -0.0636864, -0.428549, -1.06379, -0.0636864, 0.458528, -1.06379, 8.04979, -0.428549, 0.837784, -0.0636864, -0.809116, 0.330431, -0.0636864, 1.09245, -0.303074, 8.04979, 1.09245, 0.457217, 8.04979, -1.06269, -0.429859, -0.0636864, -1.06269, 1.09135, 0.0633845, 0.331742, -1.06379, 8.04979, 0.458528, -0.68343, 8.04979, -0.935901, 0.584002, 8.04979, 0.965669, 1.09135, 8.04979, -0.301763, -0.810216, -0.0636864, 0.838884, 0.457217, -0.0636864, -1.06269, 1.09135, -0.0636864, -0.301763, -0.303074, -0.0636864, 1.09245, 0.964569, -0.0636864, 0.585313, 0.837784, 8.04979, -0.809116, -0.810216, 8.04979, 0.838884, -0.937001, -0.0636864, -0.682119, -0.429859, 8.04979, -1.06269, 0.330431, 8.04979, 1.09245, 0.964569, 8.04979, 0.585313, 0.584002, -0.0636864, 0.965669, -0.68343, -0.0636864, -0.935901, -0.937001, 8.04979, -0.682119, 1.09135, -0.0636864, 0.204957)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trhcv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gty67"]
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gl7ig"]
font = ExtResource("11_3lp2j")
font_size = 28

[node name="Anger" type="Node3D"]
script = ExtResource("1_y2dum")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_iuvue")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="scene_transition_animation" parent="SubViewportContainer/SubViewport" instance=ExtResource("4_gl7ig")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.79185, 0.00484315, 0.610696, -0.295525, 0.878135, 0.376224, -0.534451, -0.478389, 0.696782, 0, 1.20129, 0)
visible = false
light_energy = 1.2
shadow_enabled = true
shadow_bias = 0.02
shadow_normal_bias = 2.89
shadow_opacity = 0.89
shadow_blur = 2.273

[node name="anger-camera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 4, 12)
projection = 1
fov = 50.0
size = 5.5
far = 60.0
script = SubResource("GDScript_j5oor")

[node name="Floor" type="StaticBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0977321, 0, 0)

[node name="floor-collider" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
shape = SubResource("BoxShape3D_54gy4")
debug_color = Color(0, 0.85, 1, 0.168627)

[node name="floor-left" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)
material_override = SubResource("StandardMaterial3D_iuvue")
mesh = SubResource("PlaneMesh_4xdg8")
skeleton = NodePath("../..")

[node name="floor-right" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
material_override = SubResource("StandardMaterial3D_iuvue")
mesh = SubResource("PlaneMesh_4xdg8")
skeleton = NodePath("../..")

[node name="floor-right2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
material_override = SubResource("StandardMaterial3D_iuvue")
mesh = SubResource("PlaneMesh_4xdg8")

[node name="floor-right3" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
material_override = SubResource("StandardMaterial3D_iuvue")
mesh = SubResource("PlaneMesh_4xdg8")
skeleton = NodePath("../floor-right2")

[node name="restriction-bottom" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, 14.8523, 0, 9.51673)
shape = SubResource("BoxShape3D_gttpk")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="restriction-top" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, 15.5858, 0, -8.74549)
shape = SubResource("BoxShape3D_bk5l6")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="restriction-left" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.15933, 0, 0.137418)
shape = SubResource("BoxShape3D_b56of")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.2823, 0, 0)
shape = SubResource("BoxShape3D_2mvgt")
debug_color = Color(0, 0.595, 0.7, 1)

[node name="CharacterBody3D" type="CharacterBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0570268, 0)
script = ExtResource("5_r2yyb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/CharacterBody3D"]
transform = Transform3D(0.452481, 0, 0.891774, 0, 1, 0, -0.891774, 0, 0.452481, -0.0563965, 0.126718, 0.052002)
shape = SubResource("BoxShape3D_j5oor")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/CharacterBody3D/CollisionShape3D"]
transform = Transform3D(0.999996, 0, -0.00300196, 0, 1, 0, 0.00300196, 0, 0.999996, 0, -0.0138851, 0)
mesh = SubResource("BoxMesh_dmj2s")
surface_material_override/0 = SubResource("StandardMaterial3D_4xdg8")

[node name="pressFIndicator" type="Sprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, -7.86208, 0.744362, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("6_c41fh")

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.93529, 5.43664e-09, 0.353883, -0.343895, 0.235905, 0.908892, -0.0834829, -0.971776, 0.22064, 0.44026, 1.40883, 0.489621)
light_energy = 23.04
shadow_enabled = true
shadow_blur = 3.862
spot_angle = 44.28

[node name="talking_indicator" type="AnimatedSprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -7.5353, 1.28151, 0)
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_y2dum")
autoplay = "default"

[node name="area-1" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66038, 0.5498, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_db25o")

[node name="area-2" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.39723, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_db25o")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25005, 0, 0.422)
shape = SubResource("BoxShape3D_db25o")

[node name="area-3" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4055, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_db25o")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.21124, 0, 0.422)
shape = SubResource("BoxShape3D_db25o")

[node name="area-4" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.3572, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_db25o")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.34, 0, 0, 0, 0.34, 0, 0, 0, 0.34, -3.14051, 0, -1.92796)
mesh = ExtResource("8_livvb")
surface_material_override/0 = SubResource("StandardMaterial3D_y2dum")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/MeshInstance3D2/StaticBody3D"]
transform = Transform3D(0.91, 0, 0, 0, 0.91, 0, 0, 0, 0.91, 0, 0.209372, 0)
shape = SubResource("ConvexPolygonShape3D_y2dum")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.34, 0, 0, 0, 0.34, 0, 0, 0, 0.34, -1.14051, 0, -1.92796)
mesh = ExtResource("8_livvb")
surface_material_override/0 = SubResource("StandardMaterial3D_y2dum")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/MeshInstance3D3/StaticBody3D"]
transform = Transform3D(0.91, 0, 0, 0, 0.91, 0, 0, 0, 0.91, 0, 0.209372, 0)
shape = SubResource("ConvexPolygonShape3D_y2dum")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.34, 0, 0, 0, 0.34, 0, 0, 0, 0.34, 0.85949, 0, -1.92796)
mesh = ExtResource("8_livvb")
surface_material_override/0 = SubResource("StandardMaterial3D_y2dum")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/MeshInstance3D4/StaticBody3D"]
transform = Transform3D(0.91, 0, 0, 0, 0.91, 0, 0, 0, 0.91, 0, 0.209372, 0)
shape = SubResource("ConvexPolygonShape3D_y2dum")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.34, 0, 0, 0, 0.34, 0, 0, 0, 0.34, 2.85949, 0, -1.92796)
mesh = ExtResource("8_livvb")
surface_material_override/0 = SubResource("StandardMaterial3D_y2dum")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/MeshInstance3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/MeshInstance3D5/StaticBody3D"]
transform = Transform3D(0.91, 0, 0, 0, 0.91, 0, 0, 0, 0.91, 0, 0.209372, 0)
shape = SubResource("ConvexPolygonShape3D_y2dum")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("9_0ojr7")

[node name="DialogueBox" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -163.0
offset_right = -27.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_6g2yb")

[node name="Panel" type="Panel" parent="CanvasLayer/DialogueBox"]
texture_filter = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trhcv")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DialogueBox"]
texture_filter = 1
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Panel" type="Panel" parent="CanvasLayer/DialogueBox/MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gty67")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DialogueBox/MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="Start" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 0
text = "*"
label_settings = SubResource("LabelSettings_gl7ig")

[node name="Label" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder Text ahahahahah Placeholder Text ahahahahah Placeholder Text ahahahahah Placeholder Text ahahahahah ahahahahah"
label_settings = SubResource("LabelSettings_gl7ig")
autowrap_mode = 2
clip_text = true
visible_characters = 0
visible_ratio = 0.0

[node name="End" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 8
text = "v"
label_settings = SubResource("LabelSettings_gl7ig")

[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-1" to="." method="_on_area_1_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-2" to="." method="_on_area_2_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-3" to="." method="_on_area_3_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-4" to="." method="_on_area_4_body_entered"]
[connection signal="stop_movement" from="CanvasLayer" to="SubViewportContainer/SubViewport/CharacterBody3D" method="_on_canvas_layer_stop_movement"]
